[package]
name = "actix-async-compat"
description = "Async await compat wrapper for Actix"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "^1.0.8"
futures = "^0.1.29"
futures3 = { version = "^0.3.1", package = "futures", features = ["compat"] }

[dev-dependencies]
failure = "^0.1.6"
tokio-timer = "0.3.0-alpha.6"